Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.6.1, 6.7.0 FF
-
None
-
-
694a67753 (dev), 8b12eb7ed (6.7), 8903bb3d6 (6.6), ffbcbec9e (tqtc/lts-6.5)
Description
TextArea/TextField: placeholderText does not respect horizontalAlignment after the component creation. There is no such problem if horizontalAlignment is set initially.
Code sample:
import QtQuick import QtQuick.Controls import QtQuick.Window Window { width: 300 height: 300 visible: true Column { Button { text: "Align Left" onClicked: { textArea.horizontalAlignment = TextArea.AlignLeft textField.horizontalAlignment = TextField.AlignLeft } } TextArea { id: textArea width: 200 placeholderText: "שלום" background: Rectangle { border.width: 1 } } TextField { id: textField width: 200 placeholderText: "שלום" background: Rectangle { border.width: 1 } } } }
Steps to reproduce:
1. Run the code sample above
2. Observe placeholder text - aligned to the Right (implicitly), since the text is RTL - OK
3. Press Align Left button.
4. Observe placeholder text - still aligned to the Right, but should be aligned to the Left, since the alignment was set explicitly - BUG
Attachments
For Gerrit Dashboard: QTBUG-120052 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524496,8 | TextArea/TextField: properly update placeholder text alignment | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
529058,2 | TextArea/TextField: properly update placeholder text alignment | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
529526,3 | TextArea/TextField: properly update placeholder text alignment | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
529834,2 | TextArea/TextField: properly update placeholder text alignment | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |