src/quick/items/qquicktextinput.cpp
@@ -540,9 +540,8 @@ QQuickTextInput::HAlignment QQuickTextInput::hAlign() const
 void QQuickTextInput::setHAlign(HAlignment align)
 {
     Q_D(QQuickTextInput);
-    bool forceAlign = d->hAlignImplicit && d->effectiveLayoutMirror;
-    d->hAlignImplicit = false;
-    if (d->setHAlign(align, forceAlign) && isComponentComplete()) {
+
+    if (d->setHAlign(align, true) && isComponentComplete()) {
         d->updateLayout();
         updateCursorRectangle();
     }
@@ -577,16 +576,33 @@ QQuickTextInput::HAlignment QQuickTextInput::effectiveHAlign() const
     return effectiveAlignment;
 }
 
-bool QQuickTextInputPrivate::setHAlign(QQuickTextInput::HAlignment alignment, bool forceAlign)
+bool QQuickTextInputPrivate::setHAlign(QQuickTextInput::HAlignment align, bool forceAlign)
 {
     Q_Q(QQuickTextInput);
-    if ((hAlign != alignment || forceAlign) && alignment <= QQuickTextInput::AlignHCenter) { // justify not supported
-        QQuickTextInput::HAlignment oldEffectiveHAlign = q->effectiveHAlign();
-        hAlign = alignment;
-        emit q->horizontalAlignmentChanged(alignment);
-        if (oldEffectiveHAlign != q->effectiveHAlign())
-            emit q->effectiveHorizontalAlignmentChanged();
+    if (align > QQuickTextInput::AlignHCenter)
+        return false; // justify is not supported
+
+    if (hAlign == align && !forceAlign)
+        return false;
+
+    const bool wasImplicit = hAlignImplicit;
+    const auto oldEffectiveHAlign = q->effectiveHAlign();
+
+    hAlignImplicit = !forceAlign;
+    if (hAlign != align) {
+        hAlign = align;
+        emit q->horizontalAlignmentChanged(align);
+    }
+
+    if (q->effectiveHAlign() != oldEffectiveHAlign) {
+        emit q->effectiveHorizontalAlignmentChanged();
         return true;
+    }
+
+    if (forceAlign && wasImplicit) {
+        // QTBUG-120052 - when horizontal text alignment is set explicitly,
+        // we need notify any other controls that may depend on it, like QQuickPlaceholderText
+        emit q->effectiveHorizontalAlignmentChanged();
     }
     return false;
 }
@@ -631,16 +647,19 @@ Qt::LayoutDirection QQuickTextInputPrivate::layoutDirection() const
 
 bool QQuickTextInputPrivate::determineHorizontalAlignment()
 {
-    if (hAlignImplicit) {
-        // if no explicit alignment has been set, follow the natural layout direction of the text
-        Qt::LayoutDirection direction = textDirection();
+    if (!hAlignImplicit)
+        return false;
+
+    // if no explicit alignment has been set, follow the natural layout direction of the text
+    Qt::LayoutDirection direction = textDirection();
 #if QT_CONFIG(im)
-        if (direction == Qt::LayoutDirectionAuto)
-            direction = QGuiApplication::inputMethod()->inputDirection();
+    if (direction == Qt::LayoutDirectionAuto)
+        direction = QGuiApplication::inputMethod()->inputDirection();
 #endif
-        return setHAlign(direction == Qt::RightToLeft ? QQuickTextInput::AlignRight : QQuickTextInput::AlignLeft);
-    }
-    return false;
+
+    const auto implicitHAlign = direction == Qt::RightToLeft ?
+            QQuickTextInput::AlignRight : QQuickTextInput::AlignLeft;
+    return setHAlign(implicitHAlign);
 }
 
 QQuickTextInput::VAlignment QQuickTextInput::vAlign() const
